feat(#977): added new project endpoints
Added new endpoints to assign a user to a project,
unassign a user from a project and change the role
of a user within a project.
